// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DiscoverErrorLink with kuery should match snapshot 1`] = `
<DiscoverLink
  query={
    Object {
      "_a": Object {
        "interval": "auto",
        "query": Object {
          "language": "kuery",
          "query": "service.name:\\"myServiceName\\" AND error.grouping_key:\\"myGroupingKey\\" AND transaction.sampled: true",
        },
        "sort": Object {
          "@timestamp": "desc",
        },
      },
    }
  }
/>
`;

exports[`DiscoverErrorLink without kuery should match snapshot 1`] = `
<DiscoverLink
  query={
    Object {
      "_a": Object {
        "interval": "auto",
        "query": Object {
          "language": "kuery",
          "query": "service.name:\\"myServiceName\\" AND error.grouping_key:\\"myGroupingKey\\"",
        },
        "sort": Object {
          "@timestamp": "desc",
        },
      },
    }
  }
/>
`;
